<resources>
    <string name="app_name">M-cif</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_tab_text_1">Pengeluaran</string>
    <string name="category_tab_text_2">Pemasukan</string>
    <string name="k1"> </string>
    <string name="k2"> </string>
    <string name="k3"> </string>
    <string name="k4"> </string>
    <string name="k5"> </string>
    <string name="k6"> </string>
    <string name="k7"> </string>
    <string name="k8"> </string>
    <string name="k9"> </string>
    <string name="k10"> </string>
    <string name="k11"> </string>
    <string name="k12"> </string>
    <string name="k13"> </string>
</resources>